cluster/app/home/freshrss/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: freshrss
  labels:
    shared-gateway-access: "true"
