cluster/app/home/freshrss/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: freshrss
  namespace: freshrss
spec:
  parentRefs:
  - name: shared-gateway
    namespace: default
  hostnames:
    - "freshrss.thoughtless.eu"
  rules:
  - matches:
    - path:
        value: /
    backendRefs:
    - name: freshrss
      port: 80
